Performed static analysis on wizard using PMD- file needs to be refactored, I cleaned up the quick things, but much more work is needed.