@@ -1,37 +1,19 @@
 package net.sf.memoranda.ui;
 
 import javax.swing.*;
-
-import java.awt.GridLayout;
-import java.awt.TextArea;
-import java.awt.List;
 import java.awt.Color;
 import java.awt.event.MouseAdapter;
 import java.awt.event.MouseEvent;
-
 import javax.swing.tree.DefaultTreeModel;
-import javax.swing.tree.TreePath;
 import javax.swing.tree.DefaultMutableTreeNode;
 import javax.swing.border.BevelBorder;
-
 import java.awt.event.ActionListener;
-import java.awt.event.ComponentListener;
 import java.awt.event.ActionEvent;
-import java.awt.Window.Type;
-import java.awt.Dialog.ModalityType;
-import java.awt.Toolkit;
 import java.awt.Dimension;
 import java.awt.Point;
 import java.awt.FlowLayout;
-import java.awt.Frame;
-
-import javax.swing.event.TreeSelectionListener;
 import javax.swing.event.ChangeEvent;
 import javax.swing.event.ChangeListener;
-import javax.swing.event.TreeSelectionEvent;
-
-import java.awt.ComponentOrientation;
-import java.awt.Dialog;
 import java.awt.Component;
 import java.io.FileNotFoundException;
 import java.io.IOException;
@@ -40,24 +22,10 @@ import java.text.SimpleDateFormat;
 import java.util.ArrayList;
 import java.util.Calendar;
 import java.util.Date;
-import java.util.Iterator;
-import java.io.File;
-
 import javax.swing.border.MatteBorder;
-
-
-
-
-
-
-
-
-
 import org.json.simple.JSONArray;
 import org.json.simple.JSONObject;
 import org.json.simple.parser.ParseException;
-import org.w3c.dom.ranges.RangeException;
-
 import net.sf.memoranda.CurrentProject;
 import net.sf.memoranda.TaskJson;
 import net.sf.memoranda.Template;
@@ -88,11 +56,11 @@ public class TaskTemplateWizard extends JDialog implements ActionListener{
 	private JCheckBox chkEndDate;
 	
 	// INPUT BOXES
-	private JTextField task_name;
+	private JTextField taskName;
 	private JTextField description;
 	private JSpinner startDate;
 	private JSpinner endDate;
-	private JComboBox est_effort;
+	private JComboBox estEffort;
 	private JComboBox priority;
 	private JTextField progress;
 	
@@ -111,9 +79,9 @@ public class TaskTemplateWizard extends JDialog implements ActionListener{
 		setTitle("Create New Template");
 		getContentPane().setLayout(null);
 		
-		JPanel task_panel = new JPanel();
-		task_panel.setBounds(6, 0, 438, 215);
-		getContentPane().add(task_panel);
+		JPanel taskPanel = new JPanel();
+		taskPanel.setBounds(6, 0, 438, 215);
+		getContentPane().add(taskPanel);
 		
 		tree = new JTree();
 		tree.setModel(new DefaultTreeModel(
@@ -153,7 +121,7 @@ public class TaskTemplateWizard extends JDialog implements ActionListener{
 	    endCalFrame = new CalendarFrame();
 	    
         startCalFrame.cal.addSelectionListener(new ActionListener() {
-            public void actionPerformed(ActionEvent e) {
+            public void actionPerformed(ActionEvent event) {
                 if (ignoreStartChanged)
                     return;
                 startDate.getModel().setValue(startCalFrame.cal.get().getCalendar().getTime());
@@ -162,7 +130,7 @@ public class TaskTemplateWizard extends JDialog implements ActionListener{
         
         
         endCalFrame.cal.addSelectionListener(new ActionListener() {
-            public void actionPerformed(ActionEvent e) {
+            public void actionPerformed(ActionEvent event) {
                 if (ignoreEndChanged)
                     return;
                 endDate.getModel().setValue(endCalFrame.cal.get().getCalendar().getTime());
@@ -175,23 +143,18 @@ public class TaskTemplateWizard extends JDialog implements ActionListener{
 		tree.setPreferredSize(new Dimension(430, 210));
 		tree.addMouseListener(new MouseAdapter() {
 			@Override
-			public void mouseClicked(MouseEvent e) {
+			public void mouseClicked(MouseEvent event) {
 
-			    if (SwingUtilities.isRightMouseButton(e)) {
-			    	
-			    	System.out.println("Right click detected.");
-
-			        int row = tree.getClosestRowForLocation(e.getX(), e.getY());
+			    if (SwingUtilities.isRightMouseButton(event)) {
+			        int row = tree.getClosestRowForLocation(event.getX(), event.getY());
 			        tree.setSelectionRow(row);
-			        menu.show(e.getComponent(), e.getX(), e.getY());
+			        menu.show(event.getComponent(), event.getX(), event.getY());
 
 			    }
 			    
-			    if (SwingUtilities.isLeftMouseButton(e)) {
-			    	
+			    if (SwingUtilities.isLeftMouseButton(event)) {
 
-
-			        int row = tree.getClosestRowForLocation(e.getX(), e.getY());
+			        int row = tree.getClosestRowForLocation(event.getX(), event.getY());
 			        tree.setSelectionRow(row);
 
 			        
@@ -200,10 +163,10 @@ public class TaskTemplateWizard extends JDialog implements ActionListener{
 			        String selectedText = selected.getUserObject().toString();
 			        
 			        // Populates text boxes
-			        task_name.setText(selectedText);
+			        taskName.setText(selectedText);
 			        description.setText(selected.getTaskDescription());
-			        est_effort.setSelectedItem(new Integer((int)selected.getEffort()).toString());
-			        progress.setText(new Integer(selected.getProgress()).toString());
+			        estEffort.setSelectedItem(Integer.valueOf((int)selected.getEffort()).toString());
+			        progress.setText(Integer.valueOf(selected.getProgress()).toString());
 			        priority.setSelectedItem(selected.getPriority());
 			        startDate.getModel().setValue(selected.getStartDate());
 			        endDate.getModel().setValue(selected.getEndDate());
@@ -213,13 +176,13 @@ public class TaskTemplateWizard extends JDialog implements ActionListener{
 		});
 		
 		
-		task_panel.setLayout(new FlowLayout(FlowLayout.CENTER, 5, 5));
+		taskPanel.setLayout(new FlowLayout(FlowLayout.CENTER, 5, 5));
 		tree.setBorder(new BevelBorder(BevelBorder.LOWERED, null, null, null, null));
-		task_panel.add(tree);
+		taskPanel.add(tree);
 		
-		JPanel button_panel = new JPanel();
-		button_panel.setBounds(6, 465, 438, 29);
-		getContentPane().add(button_panel);
+		JPanel buttonPanel = new JPanel();
+		buttonPanel.setBounds(6, 465, 438, 29);
+		getContentPane().add(buttonPanel);
 		
 		JButton btnSave = new JButton("Save");
 		btnSave.setBounds(0, 6, 106, 23);
@@ -229,16 +192,16 @@ public class TaskTemplateWizard extends JDialog implements ActionListener{
 		});
 		
 		
-		button_panel.setLayout(null);
-		button_panel.add(btnSave);
+		buttonPanel.setLayout(null);
+		buttonPanel.add(btnSave);
 		
 		JButton btnOk = new JButton("Ok");
 		btnOk.setBounds(225, 6, 106, 23);
 		
 		JButton btnLoad = new JButton("Load");
 		btnLoad.setBounds(107, 6, 106, 23);
-		button_panel.add(btnLoad);
-		button_panel.add(btnOk);
+		buttonPanel.add(btnLoad);
+		buttonPanel.add(btnOk);
 		
 		JButton btnCancel = new JButton("Cancel");
 		btnCancel.addActionListener(new ActionListener() {
@@ -247,7 +210,7 @@ public class TaskTemplateWizard extends JDialog implements ActionListener{
 			}
 		});
 		btnCancel.setBounds(332, 6, 106, 23);
-		button_panel.add(btnCancel);
+		buttonPanel.add(btnCancel);
 		
 		JPanel panel = new JPanel();
 		panel.setBorder(new MatteBorder(1, 1, 1, 1, (Color) Color.GRAY));
@@ -260,17 +223,17 @@ public class TaskTemplateWizard extends JDialog implements ActionListener{
 		lblTaskName.setBounds(26, 6, 70, 16);
 		panel.add(lblTaskName);
 		
-		task_name = new JTextField();
-		task_name.addMouseListener(new MouseAdapter() {
+		taskName = new JTextField();
+		taskName.addMouseListener(new MouseAdapter() {
 			@Override
 			public void mouseClicked(MouseEvent e) {
-				task_name.setBackground(Color.white);
+				taskName.setBackground(Color.white);
 			}
 		});
-		task_name.setBounds(36, 21, 375, 28);
-		task_name.setName("");
-		panel.add(task_name);
-		task_name.setColumns(20);
+		taskName.setBounds(36, 21, 375, 28);
+		taskName.setName("");
+		panel.add(taskName);
+		taskName.setColumns(20);
 		
 		JLabel lblDescription = new JLabel("Description");
 		lblDescription.setBounds(26, 50, 80, 16);
@@ -308,11 +271,11 @@ public class TaskTemplateWizard extends JDialog implements ActionListener{
 		lblEstEff.setBounds(6, 178, 90, 16);
 		panel.add(lblEstEff);
 		
-		est_effort = new JComboBox();
-		est_effort.setModel(new DefaultComboBoxModel(new String[] {"1", "2", "3", "5", "8", "10", "15", "20", "40"}));
-		est_effort.setName("");
-		est_effort.setBounds(102, 172, 70, 28);
-		panel.add(est_effort);
+		estEffort = new JComboBox();
+		estEffort.setModel(new DefaultComboBoxModel(new String[] {"1", "2", "3", "5", "8", "10", "15", "20", "40"}));
+		estEffort.setName("");
+		estEffort.setBounds(102, 172, 70, 28);
+		panel.add(estEffort);
 		
 		JLabel lblPriority = new JLabel("Priority");
 		lblPriority.setBounds(241, 172, 90, 16);
@@ -341,13 +304,12 @@ public class TaskTemplateWizard extends JDialog implements ActionListener{
 				
 				Template selected = (Template)tree.getSelectionPath().getLastPathComponent();
 				DefaultTreeModel model = (DefaultTreeModel) tree.getModel();
-				Template root = (Template) model.getRoot();
 				
 				// Initializes Template object
-				selected.setTaskName(task_name.getText().toString());//
-				selected.setEffort(Integer.parseInt(est_effort.getSelectedItem().toString()));
-				selected.setHeadTaskTitle(task_name.getText().toString());
-				selected.setUserObject(task_name.getText().toString());
+				selected.setTaskName(taskName.getText().toString());//
+				selected.setEffort(Integer.parseInt(estEffort.getSelectedItem().toString()));
+				selected.setHeadTaskTitle(taskName.getText().toString());
+				selected.setUserObject(taskName.getText().toString());
 				selected.setPriority(priority.getSelectedItem().toString());
 				selected.setTaskDescription(description.getText().toString());
 				selected.setProgress(Integer.parseInt(progress.getText().toString()));
@@ -383,7 +345,7 @@ public class TaskTemplateWizard extends JDialog implements ActionListener{
 		btnStartDate.setBounds(171, 138, 32, 28);
         btnStartDate.addActionListener(new java.awt.event.ActionListener() {
             public void actionPerformed(ActionEvent e) {
-                btnStartDate_actionPerformed(e);
+                btnStartDateActionPerformed(e);
             }
         });
 		panel.add(btnStartDate);
@@ -394,19 +356,19 @@ public class TaskTemplateWizard extends JDialog implements ActionListener{
 		btnEndDate.setIcon(new ImageIcon(TaskTemplateWizard.class.getResource("/net/sf/memoranda/ui/resources/icons/calendar.png")));
 		btnEndDate.setBounds(400, 138, 32, 28);
         btnEndDate.addActionListener(new java.awt.event.ActionListener() {
-            public void actionPerformed(ActionEvent e) {
-                btnEndDate_actionPerformed(e);
+            public void actionPerformed(ActionEvent event) {
+                btnEndDateActionPerformed(event);
             }
         });
         
         endDate.setEditor(new JSpinner.DateEditor(endDate, sdf.toPattern()));
         
         endDate.addChangeListener(new ChangeListener() {
-            public void stateChanged(ChangeEvent e) {
+            public void stateChanged(ChangeEvent event) {
             	// it's an ugly hack so that the spinner can increase day by day
-				Template selected = (Template)tree.getSelectionPath().getLastPathComponent();
-				DefaultTreeModel model = (DefaultTreeModel) tree.getModel();
-				Template root = (Template) model.getRoot();
+				//Template selected = (Template)tree.getSelectionPath().getLastPathComponent();
+				//DefaultTreeModel model = (DefaultTreeModel) tree.getModel();
+				//Template root = (Template) model.getRoot();
             	SpinnerDateModel sdm = new SpinnerDateModel((Date)endDate.getModel().getValue(),null,null,Calendar.DAY_OF_WEEK);
             	endDate.setModel(sdm);
             	
@@ -419,11 +381,11 @@ public class TaskTemplateWizard extends JDialog implements ActionListener{
                     endDate.getModel().setValue(ed);
                     ed = sd;
                 }
-				if ((endDateMax != null) && ed.after(endDateMax.getDate())) {
+				if (endDateMax != null && ed.after(endDateMax.getDate())) {
 					endDate.getModel().setValue(endDateMax.getDate());
                     ed = endDateMax.getDate();
 				}
-                if ((endDateMin != null) && ed.before(endDateMin.getDate())) {
+                if (endDateMin != null && ed.before(endDateMin.getDate())) {
                     endDate.getModel().setValue(endDateMin.getDate());
                     ed = endDateMin.getDate();
                 }
@@ -438,19 +400,16 @@ public class TaskTemplateWizard extends JDialog implements ActionListener{
 		panel.add(chkEndDate);
 		
 		chkEndDate.addActionListener(new java.awt.event.ActionListener() {
-			public void actionPerformed(ActionEvent e) {
-				chkEndDate_actionPerformed(e);
+			public void actionPerformed(ActionEvent event) {
+				chkEndDateActionPerformed(event);
 			}
 		});
 		
 		// RESET (WORKING)
 		btnReset.addMouseListener(new MouseAdapter() {
 			@Override
-			public void mouseClicked(MouseEvent e) {
-				
-				System.out.println("Reset selected.");
+			public void mouseClicked(MouseEvent event) {
 				reset();
-				
 			}
 		});
 		
@@ -458,10 +417,7 @@ public class TaskTemplateWizard extends JDialog implements ActionListener{
 		// TO-DO: Instantiate Template class by iterating over tree
 		btnOk.addMouseListener(new MouseAdapter() {
 			@Override
-			public void mouseClicked(MouseEvent e) {
-				
-				System.out.println("Ok selected.");
-				//ok();
+			public void mouseClicked(MouseEvent event) {
 				loadIn(); 
 			}
 		});
@@ -469,24 +425,18 @@ public class TaskTemplateWizard extends JDialog implements ActionListener{
 		// TO-DO: Need to somehow populate a Template class by iterating over tree
 		btnSave.addMouseListener(new MouseAdapter() {
 			@Override
-			public void mouseClicked(MouseEvent e) {
-				
-				System.out.println("Save selected.");
-				//SelectRootNode();
-				String name = task_name.getText();
+			public void mouseClicked(MouseEvent event) {
+				String name = taskName.getText();
 				if(!name.isEmpty()) {
-					Date startD = (Date)startDate.getModel().getValue();
-					Date endD = (Date)endDate.getModel().getValue();
-					String effort = est_effort.getSelectedItem().toString();
-					String prog = progress.getText();
-					String desc = description.getText();
-				
-					int index = priority.getSelectedIndex();
-					String prior = "";
-			
+					//Date startD = (Date)startDate.getModel().getValue();
+					//Date endD = (Date)endDate.getModel().getValue();
+					//String effort = estEffort.getSelectedItem().toString();
+					//String prog = progress.getText();
+					//String desc = description.getText();
+					//int index = priority.getSelectedIndex();
+					//String prior = "";
 					//System.out.println(index);
-				
-					prior = getStringPriority(index);
+					//prior = getStringPriority(index);
 				
 				try {
 					saving();
@@ -503,7 +453,7 @@ public class TaskTemplateWizard extends JDialog implements ActionListener{
 		
 				}
 				else {
-					task_name.setBackground(Color.red);
+					taskName.setBackground(Color.red);
 				}
 				
 			}
@@ -516,7 +466,7 @@ public class TaskTemplateWizard extends JDialog implements ActionListener{
 		//WORKING -- Load the tree from the template screen to the task list.
 		btnLoad.addMouseListener(new MouseAdapter() {
 			@Override
-			public void mouseClicked(MouseEvent e) {
+			public void mouseClicked(MouseEvent event) {
 				
 				JDialog loader = getLoader();
 				loader.setVisible(true);
@@ -535,7 +485,7 @@ public class TaskTemplateWizard extends JDialog implements ActionListener{
 	}
 
 	//this selects the root node in the tree
-	public void SelectRootNode() {
+	public void selectRootNode() {
 		this.tree.setSelectionRow(0);
 	}
 	
@@ -549,16 +499,15 @@ public class TaskTemplateWizard extends JDialog implements ActionListener{
 	}
 
 	@Override
-	public void actionPerformed(ActionEvent e) {
+	public void actionPerformed(ActionEvent event) {
 		
 		Template selected = (Template)tree.getSelectionPath().getLastPathComponent();
 		DefaultTreeModel model = (DefaultTreeModel) tree.getModel();
 		Template root = (Template) model.getRoot();
 		
 		// ADD (WORKING)
-		JMenuItem item = (JMenuItem) e.getSource();
+		JMenuItem item = (JMenuItem) event.getSource();
 		if (item.equals(add)){
-			System.out.println("Add selected");
 
 			Template subtask = new Template("Sub Task");
 			model.insertNodeInto(subtask, root, root.getChildCount());
@@ -574,15 +523,11 @@ public class TaskTemplateWizard extends JDialog implements ActionListener{
 		else if (item.equals(remove)){
 			model.removeNodeFromParent(selected);
 			root.removeSubtask(selected);
-			tree.revalidate();
-			
-			System.out.println("Remove selected");
-			
+			tree.revalidate();	
 		}
 		
 		// RENAME (WORKING)
 		else if (item.equals(rename)){
-			System.out.println("Rename selected");
 			tree.startEditingAtPath(tree.getSelectionPath());
 			String selectedText = selected.getUserObject().toString();
 			selected.setHeadTaskTitle(selectedText); // Changed this to selected, should be root maybe? idk
@@ -593,9 +538,9 @@ public class TaskTemplateWizard extends JDialog implements ActionListener{
 	}
 	
 	public void reset(){
-        task_name.setText("");
+        taskName.setText("");
         description.setText("");
-        est_effort.setSelectedItem("");
+        estEffort.setSelectedItem("");
         progress.setText("");
         priority.setSelectedItem("Normal");
         startDate.getModel().setValue(new Date());
@@ -610,7 +555,7 @@ public class TaskTemplateWizard extends JDialog implements ActionListener{
 		else {
 			Template troot = (Template) model.getRoot();
 			this.tree.setSelectionRow(0);
-			troot.setEffort(Long.parseLong(est_effort.getSelectedItem().toString()));
+			troot.setEffort(Long.parseLong(estEffort.getSelectedItem().toString()));
 			troot.loadTemplate();
 		}
 		this.dispose();
@@ -623,7 +568,7 @@ public class TaskTemplateWizard extends JDialog implements ActionListener{
 		this.dispose();
 	}
 	
-    void btnStartDate_actionPerformed(ActionEvent e) {
+    void btnStartDateActionPerformed(ActionEvent event) {
         startCalFrame.setLocation(btnStartDate.getLocation());
         startCalFrame.setSize(200, 200);
         this.getLayeredPane().add(startCalFrame);
@@ -631,7 +576,7 @@ public class TaskTemplateWizard extends JDialog implements ActionListener{
 
     }
 
-    void btnEndDate_actionPerformed(ActionEvent e) {
+    void btnEndDateActionPerformed(ActionEvent event) {
     	// Defaulted to btnStartDate's location for now
         endCalFrame.setLocation(btnStartDate.getLocation());
         endCalFrame.setSize(200, 200);
@@ -639,7 +584,7 @@ public class TaskTemplateWizard extends JDialog implements ActionListener{
         endCalFrame.show();
     }
     
-	void chkEndDate_actionPerformed(ActionEvent e) {
+	void chkEndDateActionPerformed(ActionEvent event) {
 		endDate.setEnabled(chkEndDate.isSelected());
 		btnEndDate.setEnabled(chkEndDate.isSelected());
 		lblEndDate.setEnabled(chkEndDate.isSelected());
@@ -672,7 +617,7 @@ public class TaskTemplateWizard extends JDialog implements ActionListener{
 	}
 	
 	public JDialog getLoader() {
-		SelectRootNode(); //sets the root node as the selected node for loading
+		selectRootNode(); //sets the root node as the selected node for loading
 		ArrayList<String> ids = getLoaderNames();
 		JDialog loader = new JDialog(this, true);
 		loader.setTitle("Load Template");
@@ -681,15 +626,12 @@ public class TaskTemplateWizard extends JDialog implements ActionListener{
 		ArrayList<String> names = new ArrayList<String>();
 		
 		try{
-			System.out.println("the size: " + ids.size());
-			TaskJson tj = new TaskJson("template.json","tasks");
+			TaskJson taskjson = new TaskJson("template.json","tasks");
 			for(int i = 0; i < ids.size(); i++){
-				//System.out.println(ids.get(i));
-				names.add(tj.getElement(ids.get(i), "name"));
+				names.add(taskjson.getElement(ids.get(i), "name"));
 			}
 		}
 		catch(IOException | ParseException e){
-			System.out.println("Unable to load tasks in wizard.");
 		}
 		
 		
@@ -713,13 +655,12 @@ public class TaskTemplateWizard extends JDialog implements ActionListener{
 		
 		JButton btnOk = new JButton("Ok");
 		btnOk.addActionListener(new ActionListener() {
-			public void actionPerformed(ActionEvent e) {
+			public void actionPerformed(ActionEvent event) {
 				
 				// Gets current selected name in ComboBox
 				
 				String current = comboBox.getSelectedItem().toString();
 				String id = String.valueOf(ids.get(comboBox.getSelectedIndex()));
-				System.out.println("the id selected is: " + id);
 				try {
 					populateTreeFromLoad(id);
 				} catch (IOException | ParseException e1) {
@@ -738,7 +679,7 @@ public class TaskTemplateWizard extends JDialog implements ActionListener{
 		
 		JButton btnCancel = new JButton("Cancel");
 		btnCancel.addActionListener(new ActionListener() {
-			public void actionPerformed(ActionEvent e) {
+			public void actionPerformed(ActionEvent event) {
 				loader.dispose();
 			}
 		});
@@ -746,7 +687,7 @@ public class TaskTemplateWizard extends JDialog implements ActionListener{
 		
 		JButton btnDeleteTemplate = new JButton("");
 		btnDeleteTemplate.addActionListener(new ActionListener() {
-			public void actionPerformed(ActionEvent e) {
+			public void actionPerformed(ActionEvent event) {
 				String tmp = "Are you sure you want to delete ";
 				String cur = comboBox.getSelectedItem().toString();
 				tmp = tmp + cur + "?";
@@ -773,8 +714,8 @@ public class TaskTemplateWizard extends JDialog implements ActionListener{
 		tj = new TaskJson("template.json","tasks");
 		names = tj.getRootIds();
 		}
-		catch(Exception e){
-			System.out.println("ERROR LOADING JSON");
+		catch(Exception exception){
+			exception.printStackTrace();
 		}
 
 		return names;
@@ -791,9 +732,9 @@ public class TaskTemplateWizard extends JDialog implements ActionListener{
 		tree.setModel(new DefaultTreeModel(
 				new Template(name)) {
 					{
-						task_name.setText(name);
+						taskName.setText(name);
 				        description.setText(json.getElement(id, "description"));
-				        est_effort.setSelectedItem(json.getElement(id, "effort"));
+				        estEffort.setSelectedItem(json.getElement(id, "effort"));
 				        progress.setText(json.getElement(id, "progress"));
 				        priority.setSelectedItem(getStringPriority(
 				        		Integer.parseInt(json.getElement(id, "priority"))
@@ -820,14 +761,13 @@ public class TaskTemplateWizard extends JDialog implements ActionListener{
 			root.setEndDate(new Date());
 			
 			
-			// Starts at one because the 0 index is the root 	
+			// Starts at one because the 0 index is the root
+				Template subtask;
 				for(int i = 1; i < subtasks.size(); i++){
 				JSONObject currentSubtask = (JSONObject) subtasks.get(i);
-				Template subtask = new Template(currentSubtask.get("name").toString());
+				subtask = new Template(currentSubtask.get("name").toString());
 				subtask.setHeadTaskTitle(root.getTaskName());
 				subtask.setTaskDescription(currentSubtask.get("description").toString());
-				System.out.println("SUBTASK DESCRIPTION: " + currentSubtask.get("description").toString());
-				//subtask.setParent(newParent);
 				subtask.setEffort(Long.parseLong(currentSubtask.get("effort").toString()));
 				subtask.setPriority(getStringPriority(
 						Integer.parseInt(currentSubtask.get("priority").toString()))
